// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippet: #0 - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["angular"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
@let    foo     =  'Hello'   + ', World'; 
=====================================output=====================================
@let foo = 'Hello'   + ', World';

================================================================================
`;

exports[`snippet: #0 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["angular"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
@let    foo     =  'Hello'   + ', World'; 
=====================================output=====================================
@let foo = "Hello" + ", World";

================================================================================
`;
